--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@firebase/app": "^0.1.6",
     "@ionic-native/core": "4.5.3",
+    "@ionic-native/image-picker": "^4.8.0",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6.0",
+    "cordova-plugin-telerik-imagepicker": "^2.2.1",
     "firebase": "^4.13.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -38,5 +40,10 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-telerik-imagepicker": {}
+    }
+  }
 }
